# work_tasks

./: .gitignore  CMakeLists.txt  abstractobjectloader.cpp  abstractobjectloader.h  air_entity_viewer.pro  air_entity_viewer_ru_RU.ts  example.json  example.xml  jsonobjectloader.cpp  jsonobjectloader.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.json  modelloader.cpp  modelloader.h  objectloaderfactory.cpp  objectloaderfactory.h  treeitem.h  xmlobjectloder.cpp  xmlobjectloder.h
cpp/: CMakeLists.txt  main.cpp  ocv_contour_analysis.h  segmentation.h
py/: main.py
